# cpp-python-example

./: .gitignore  CMakeLists.txt  README.md
.docker/: Dockerfile.devenv  config.json  env.yaml  environment.yml
cmake/: CCache.cmake  CondaAware.cmake  exampleConfig.cmake.in  exampleInstallCMakeConfigFiles.cmake
example/: CMakeLists.txt  foo.hpp
python/: CMakeLists.txt
python/bindings/: CMakeLists.txt  foo.py.cpp
python/package/: CMakeLists.txt  setup.py.in
python/package/example/: __init__.py
tests/: CMakeLists.txt  foo.test.cpp
